--- a/empty.html
+++ b/empty.html
@@ -46,9 +46,7 @@ DAMAGE.
 <!--}}}-->
 
 <!--PRE-HEAD-END-->
-<title>
-
-</title>
+<title> sangfor ac wiki - a reusable non-linear personal web notebook </title>
 <style id="styleArea" type="text/css">
 #saveTest {display:none;}
 #messageArea {display:none;}
@@ -522,7 +520,11 @@ noscript {display:none;} /* Fixes a feature in Firefox 1.5.0.2 where print previ
 
 </div>
 <!--POST-SHADOWAREA-->
-<div id="storeArea"></div>
+<div id="storeArea">
+<div title="SiteTitle" creator="YourName" modifier="YourName" created="201402080207" changecount="1">
+<pre>sangfor ac wiki</pre>
+</div>
+</div>
 <!--POST-STOREAREA-->
 <!--POST-BODY-START-->
 
