--- a/empty.html
+++ b/empty.html
@@ -46,7 +46,7 @@ DAMAGE.
 <!--}}}-->
 
 <!--PRE-HEAD-END-->
-<title> sangfor ac wiki - a reusable non-linear personal web notebook </title>
+<title> Sangfor AC Wiki - XXXXXXXXXXX </title>
 <style id="styleArea" type="text/css">
 #saveTest {display:none;}
 #messageArea {display:none;}
@@ -521,8 +521,11 @@ noscript {display:none;} /* Fixes a feature in Firefox 1.5.0.2 where print previ
 </div>
 <!--POST-SHADOWAREA-->
 <div id="storeArea">
-<div title="SiteTitle" creator="YourName" modifier="YourName" created="201402080207" changecount="1">
-<pre>sangfor ac wiki</pre>
+<div title="SiteSubtitle" creator="YourName" modifier="YourName" created="201402080233" changecount="1">
+<pre>XXXXXXXXXXX</pre>
+</div>
+<div title="SiteTitle" creator="YourName" modifier="YourName" created="201402080207" modified="201402080232" changecount="2">
+<pre>Sangfor AC Wiki</pre>
 </div>
 </div>
 <!--POST-STOREAREA-->
