must open with firefox

--- a/empty.html
+++ b/empty.html
@@ -46,7 +46,7 @@ DAMAGE.
 <!--}}}-->
 
 <!--PRE-HEAD-END-->
-<title> Sangfor AC Wiki - XXXXXXXXXXX </title>
+<title> 常见问题排查指导 -  </title>
 <style id="styleArea" type="text/css">
 #saveTest {display:none;}
 #messageArea {display:none;}
@@ -521,11 +521,83 @@ noscript {display:none;} /* Fixes a feature in Firefox 1.5.0.2 where print previ
 </div>
 <!--POST-SHADOWAREA-->
 <div id="storeArea">
-<div title="SiteSubtitle" creator="YourName" modifier="YourName" created="201402080233" changecount="1">
-<pre>XXXXXXXXXXX</pre>
+<div title="DefaultTiddlers" creator="YourName" modifier="YourName" created="201402101305" changecount="1">
+<pre>[[列表]]</pre>
 </div>
-<div title="SiteTitle" creator="YourName" modifier="YourName" created="201402080207" modified="201402080232" changecount="2">
-<pre>Sangfor AC Wiki</pre>
+<div title="GettingStarted" creator="YourName" modifier="YourName" created="201402101305" changecount="1">
+<pre>To get started with this blank [[TiddlyWiki]], you'll need to modify the following tiddlers:
+* [[SiteTitle]] &amp; [[SiteSubtitle]]: The title and subtitle of the site, as shown above (after saving, they will also appear in the browser title bar)
+* [[MainMenu]]: The menu (usually on the left)
+* [[DefaultTiddlers]]: Contains the names of the tiddlers that you want to appear when the TiddlyWiki is opened
+You'll also need to enter your username for signing your edits: &lt;&lt;option txtUserName&gt;&gt;
+</pre>
+</div>
+<div title="MainMenu" creator="YourName" modifier="YourName" created="201402100240" modified="201402101306" changecount="3">
+<pre>[[列表]]</pre>
+</div>
+<div title="QQ聊天审计不了" creator="YourName" modifier="YourName" created="201402111315" changecount="1">
+<pre>Type the text for 'New Tiddler'</pre>
+</div>
+<div title="SC配置下发有问题" creator="YourName" modifier="YourName" created="201402111104" changecount="1">
+<pre>Type the text for 'New Tiddler'</pre>
+</div>
+<div title="SiteSubtitle" creator="YourName" modifier="YourName" created="201402100240" changecount="1">
+<pre></pre>
+</div>
+<div title="SiteTitle" creator="YourName" modifier="YourName" created="201402100240" modified="201402100240" changecount="3">
+<pre>常见问题排查指导</pre>
+</div>
+<div title="列表" creator="YourName" modifier="ac-support" created="201402101305" modified="201402111330" changecount="7">
+<pre>[[控制台（或内置数据中心）登录不了，或者能登录，但很卡，很慢]]
+[[SC配置下发有问题]]
+[[无法弹出密码认证页面（框）]]
+[[密码认证不成功]]
+[[重定向问题]]
+[[QQ聊天审计不了]]
+[[设备升级版本（打定制包）失败]]
+[[升级确认]]
+[[skype相关问题]]
+[[双机无故切换]]
+[[双机切换失败]]
+[[双机配置同步失败]]
+[[数据中心日志导出失败]]
+</pre>
+</div>
+<div title="同步日志到外置数据中心很慢，失败" creator="YourName" modifier="YourName" created="201402110648" changecount="1">
+<pre>Type the text for 'New Tiddler'</pre>
+</div>
+<div title="密码认证不成功" creator="YourName" modifier="YourName" created="201402111110" changecount="1">
+<pre>Type the text for 'New Tiddler'</pre>
+</div>
+<div title="控制台（或内置数据中心）登录不了，或者能登录，但很卡，很慢" creator="YourName" modifier="ac-support" created="201402101249" modified="201402111317" changecount="2">
+<pre>1.能否ping得通设备内网口（LAN口）？
+2.能否telnet得通设备443，22345，85这几个端口？
+3.用笔记本直连能否登录？
+4.直连管理口（DMZ口）能否登录？</pre>
+</div>
+<div title="数据中心日志查询很慢" creator="YourName" modifier="YourName" created="201402110724" changecount="1">
+<pre>Type the text for 'New Tiddler'</pre>
+</div>
+<div title="数据中心日志查询，统计，报表有空日志（如空URL，空应用）" creator="YourName" modifier="YourName" created="201402110713" changecount="1">
+<pre>Type the text for 'New Tiddler'</pre>
+</div>
+<div title="断网，上网慢" creator="YourName" modifier="YourName" created="201402110645" modified="201402110645" changecount="2">
+<pre>Type the text for 'New Tiddler'</pre>
+</div>
+<div title="无法弹出密码认证页面（框）" creator="YourName" modifier="YourName" created="201402110731" changecount="1">
+<pre>Type the text for 'New Tiddler'</pre>
+</div>
+<div title="短信认证" creator="YourName" modifier="YourName" created="201402110725" changecount="1">
+<pre>Type the text for 'New Tiddler'</pre>
+</div>
+<div title="设备升级版本（打定制包）失败" creator="YourName" modifier="YourName" created="201402111315" changecount="1">
+<pre>Type the text for 'New Tiddler'</pre>
+</div>
+<div title="设备自动重启" creator="YourName" modifier="YourName" created="201402110720" changecount="1">
+<pre>Type the text for 'New Tiddler'</pre>
+</div>
+<div title="重定向问题" creator="YourName" modifier="YourName" created="201402111107" changecount="1">
+<pre>Type the text for 'New Tiddler'</pre>
 </div>
 </div>
 <!--POST-STOREAREA-->
